last update friendlist

--- a/src/main/resources/templates/friendlist.html
+++ b/src/main/resources/templates/friendlist.html
@@ -47,7 +47,7 @@
               <span class="icon">
                 <img
                   class="notAcceptFriendIcon"
-                  src="../static/icons/accept.svg"
+                  src="icons/accept.svg"
                   alt="icon"
                 />
               </span>
@@ -61,7 +61,7 @@
               <span class="icon">
                 <img
                   class="acceptFriendIcon"
-                  src="../static/icons/accept.svg"
+                  src="icons/accept.svg"
                   alt="icon"
                 />
               </span>
@@ -69,7 +69,7 @@
               <span class="icon">
                 <img
                   class="notAcceptFriendIcon"
-                  src="../static/icons/accept.svg"
+                  src="icons/accept.svg"
                   alt="icon"
                 />
               </span>
@@ -83,14 +83,14 @@
               <span class="icon">
                 <img
                   class="acceptFriendIcon"
-                  src="../static/icons/accept.svg"
+                  src="icons/accept.svg"
                   alt="icon"
                 />
               </span>
               <span class="icon">
                 <img
                   class="notAcceptFriendIcon"
-                  src="../static/icons/accept.svg"
+                  src="icons/accept.svg"
                   alt="icon"
                 />
               </span>
@@ -116,7 +116,7 @@
               <span class="icon">
                 <img
                   class="unfriendIcon"
-                  src="../static/icons/unfriend.svg"
+                  src="icons/unfriend.svg"
                   alt="icon"
                 />
               </span>
@@ -128,7 +128,7 @@
               <span class="icon">
                 <img
                   class="unfriendIcon"
-                  src="../static/icons/unfriend.svg"
+                  src="icons/unfriend.svg"
                   alt="icon"
                 />
               </span>
@@ -140,7 +140,7 @@
               <span class="icon"
                 ><img
                   class="unfriendIcon"
-                  src="../static/icons/unfriend.svg"
+                  src="icons/unfriend.svg"
                   alt="icon"
               /></span>
               <span class="status">single</span>
@@ -151,7 +151,7 @@
               <span class="icon"
                 ><img
                   class="unfriendIcon"
-                  src="../static/icons/unfriend.svg"
+                  src="icons/unfriend.svg"
                   alt="icon"
               /></span>
               <span class="status">single</span>
@@ -162,7 +162,7 @@
               <span class="icon"
                 ><img
                   class="unfriendIcon"
-                  src="../static/icons/unfriend.svg"
+                  src="icons/unfriend.svg"
                   alt="icon"
               /></span>
               <span class="status">single</span>
@@ -173,7 +173,7 @@
               <span class="icon"
                 ><img
                   class="unfriendIcon"
-                  src="../static/icons/unfriend.svg"
+                  src="icons/unfriend.svg"
                   alt="icon"
               /></span>
               <span class="status">single</span>
@@ -184,7 +184,7 @@
               <span class="icon"
                 ><img
                   class="unfriendIcon"
-                  src="../static/icons/unfriend.svg"
+                  src="icons/unfriend.svg"
                   alt="icon"
               /></span>
               <span class="status">single</span>
@@ -195,7 +195,7 @@
               <span class="icon"
                 ><img
                   class="unfriendIcon"
-                  src="../static/icons/unfriend.svg"
+                  src="icons/unfriend.svg"
                   alt="icon"
               /></span>
               <span class="status">single</span>
