--- a/src/main/resources/templates/friendlist.html
+++ b/src/main/resources/templates/friendlist.html
@@ -39,7 +39,7 @@
               <span class="icon">
                 <img
                   class="acceptFriendIcon"
-                  src="../static/icons/accept.svg"
+                  src="icons/accept.svg"
                   alt="icon"
                 />
               </span>
