--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,9 +4,9 @@
   <footer>
     <p>
       Copyright &copy; 2021 Locster UG (haftungsbeschränkt) &nbsp;-&nbsp;
-      <a to="/impressum">Impressum</a>
+      <a href="/impressum">Impressum</a>
       &nbsp;-&nbsp;
-      <a to="/datenschutz">Datenschutz</a>
+      <a href="/datenschutz">Datenschutz</a>
     </p>
   </footer>
 </div>
