--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -111,7 +111,7 @@ input:focus {
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
-    padding: 25px 0;
+    padding: 25px 0 40px;
     width: 100%;
 }
 
@@ -122,6 +122,7 @@ input:focus {
     justify-content: flex-start;
     justify-self: flex-start;
     flex: 1;
+
 }
 
 .btn {
@@ -131,4 +132,5 @@ input:focus {
     border-width: 2px;
     background-color: #FFEE94;
     border-radius: 25px;
+    cursor: pointer;
 }
