--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+    <!-- navbar -->
+    <header th:replace="fragments/nav"></header>
+
     <div class="link">
       <a href="login" title="go to Login"
         >Schon Teil der Crew? Hier geht's zum Log-In</a
