--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,12 +1,31 @@
+/* general structure */
+
 *,
 *:before,
 *:after {
     box-sizing: inherit;
+    margin: 0;
+    padding: 0;
 }
 
 html {
     box-sizing: border-box;
     scroll-behavior: smooth;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #3cb5ee;
+    font-family: "DejaVu Sans", Arial, Helvetica, sans-serif;
+}
+
+.container {
+    width: 800px;
+    margin: auto;
+    background-color: #63bee8;
+    display: flex;
+    flex-direction: column;
 }
 
 /* alert messages success, info and danger */
