--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,13 +3,13 @@
   <head th:replace="fragments/head"> </head>
 
   <head>
+    <link th:href = "@{/css/login.css}" rel="stylesheet">
+    <link th:href = "@{/css/signup.css}" rel="stylesheet">
+    <script type="text/javascript" th:src = "@{/js/signup.js}"></script>
     <title>Login.de.SignUp</title>
   </head>
 
   <body>
-    <!-- navbar -->
-    <header th:replace="fragments/nav"></header>
-
     <div class="link">
       <a href="login" title="go to Login"
         >Schon Teil der Crew? Hier geht's zum Log-In</a
