--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -28,6 +28,16 @@ body {
     flex-direction: column;
 }
 
+.box {
+    background-color: #fff3b1;
+    margin: 2%;
+    border: 2px solid #fed700;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 /* alert messages success, info and danger */
 
 .alert {
