--- a/src/main/resources/templates/impressum.html
+++ b/src/main/resources/templates/impressum.html
@@ -3,25 +3,35 @@
   <head th:replace="fragments/head"> </head>
 
 <head>
+    <link th:href="@{/css/impressum.css}" rel="stylesheet" />
     <title>Impressum</title>
 </head>
 <body>
 
-    <div class='impressum'><h1>Impressum</h1><p>Angaben gemäß § 5 TMG</p><p>Max Muster <br>
-    Musterweg<br>
-    12345 Musterstadt <br>
-</p><p> <strong>Vertreten durch: </strong><br>
-    Max Muster<br>
-</p><p><strong>Kontakt:</strong> <br>
-    Telefon: 01234-789456<br>
-    Fax: 1234-56789<br>
-    E-Mail: <a href='mailto:max@muster.de'>max@muster.de</a></br></p><p><strong>Umsatzsteuer-ID: </strong> <br>
-    Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: Musterustid.<br><br>
-    <strong>Wirtschafts-ID: </strong><br>
-    Musterwirtschaftsid<br>
-</p><p><strong>Aufsichtsbehörde:</strong><br>
-    Musteraufsicht Musterstadt<br></p><br>
-    Website Impressum von <a href="https://www.impressum-generator.de">impressum-generator.de</a>
+<!-- navbar -->
+<header th:replace="fragments/nav"></header>
+
+<div class="container">
+    <div class="box">
+
+
+        <div class='impressum'><h1>Impressum</h1><p>Angaben gemäß § 5 TMG</p><p>Max Muster <br>
+        Musterweg<br>
+        12345 Musterstadt <br>
+    </p><p> <strong>Vertreten durch: </strong><br>
+        Max Muster<br>
+    </p><p><strong>Kontakt:</strong> <br>
+        Telefon: 01234-789456<br>
+        Fax: 1234-56789<br>
+        E-Mail: <a href='mailto:max@muster.de'>max@muster.de</a></br></p><p><strong>Umsatzsteuer-ID: </strong> <br>
+        Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: Musterustid.<br><br>
+        <strong>Wirtschafts-ID: </strong><br>
+        Musterwirtschaftsid<br>
+    </p><p><strong>Aufsichtsbehörde:</strong><br>
+        Musteraufsicht Musterstadt<br></p><br>
+        Website Impressum von <a href="https://www.impressum-generator.de">impressum-generator.de</a>
+    </div>
+    </div>
 </div>
     
     <!-- footer -->
