--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -3,7 +3,7 @@
   <head th:replace="fragments/head"> </head>
 
 <head>
-    <link th:href="@{/css/impressum.css}" rel="stylesheet" />
+    <link th:href="@{/css/imprint.css}" rel="stylesheet" />
     <title>Impressum</title>
 </head>
 <body>
