--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -43,7 +43,7 @@ body {
   flex-direction: column;
 }
 
-.container {
+.chatContainer {
   position: relative;
   top: 50%;
   left: 50%;
@@ -52,20 +52,20 @@ body {
   background-color: var(--white);
   transform: translate(-50%, -50%);
 }
-.container .left {
+.chatContainer .left {
   float: left;
   width: 37.6%;
   height: 100%;
   border: 1px solid var(--light);
   background-color: var(--white);
 }
-.container .left .top {
+.chatContainer .left .top {
   position: relative;
   width: 100%;
   height: 96px;
   padding: 29px;
 }
-.container .left .top:after {
+.chatContainer .left .top:after {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -76,7 +76,7 @@ body {
   background-color: var(--light);
   transform: translate(-50%, 0);
 }
-.container .left input {
+.chatContainer .left input {
   float: left;
   width: 188px;
   height: 42px;
@@ -87,10 +87,10 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
 }
-.container .left input:focus {
+.chatContainer .left input:focus {
   outline: none;
 }
-.container .left a.search {
+.chatContainer .left a.search {
   display: block;
   float: left;
   width: 42px;
@@ -103,20 +103,20 @@ body {
   background-position: top 12px left 14px;
   border-radius: 50%;
 }
-.container .left .people {
+.chatContainer .left .people {
   margin-left: -1px;
   border-right: 1px solid var(--light);
   border-left: 1px solid var(--light);
   width: calc(100% + 2px);
 }
-.container .left .people .person {
+.chatContainer .left .people .person {
   position: relative;
   width: 100%;
   padding: 12px 10% 16px;
   cursor: pointer;
   background-color: var(--white);
 }
-.container .left .people .person:after {
+.chatContainer .left .people .person:after {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -127,7 +127,7 @@ body {
   background-color: var(--light);
   transform: translate(-50%, 0);
 }
-.container .left .people .person img {
+.chatContainer .left .people .person img {
   float: left;
   width: 40px;
   height: 40px;
@@ -136,14 +136,14 @@ body {
   -o-object-fit: cover;
   object-fit: cover;
 }
-.container .left .people .person .name {
+.chatContainer .left .people .person .name {
   font-size: 14px;
   line-height: 22px;
   color: var(--dark);
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 600;
 }
-.container .left .people .person .time {
+.chatContainer .left .people .person .time {
   font-size: 14px;
   position: absolute;
   top: 16px;
@@ -152,7 +152,7 @@ body {
   color: var(--grey);
   background-color: var(--white);
 }
-.container .left .people .person .preview {
+.chatContainer .left .people .person .preview {
   font-size: 14px;
   display: inline-block;
   overflow: hidden !important;
@@ -161,8 +161,8 @@ body {
   text-overflow: ellipsis;
   color: var(--grey);
 }
-.container .left .people .person.active,
-.container .left .people .person:hover {
+.chatContainer .left .people .person.active,
+.chatContainer .left .people .person:hover {
   margin-top: -1px;
   margin-left: -1px;
   padding-top: 13px;
@@ -171,37 +171,37 @@ body {
   width: calc(100% + 2px);
   padding-left: calc(10% + 1px);
 }
-.container .left .people .person.active span,
-.container .left .people .person:hover span {
+.chatContainer .left .people .person.active span,
+.chatContainer .left .people .person:hover span {
   color: var(--white);
   background: transparent;
 }
-.container .left .people .person.active:after,
-.container .left .people .person:hover:after {
+.chatContainer .left .people .person.active:after,
+.chatContainer .left .people .person:hover:after {
   display: none;
 }
-.container .right {
+.chatContainer .right {
   position: relative;
   float: left;
   width: 62.4%;
   height: 100%;
 }
-.container .right .top {
+.chatContainer .right .top {
   width: 100%;
   height: 47px;
   padding: 15px 29px;
   background-color: #eceff1;
 }
-.container .right .top span {
+.chatContainer .right .top span {
   font-size: 15px;
   color: var(--grey);
 }
-.container .right .top span .name {
+.chatContainer .right .top span .name {
   color: var(--dark);
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 600;
 }
-.container .right .chat {
+.chatContainer .right .chat {
   position: relative;
   display: none;
   overflow: hidden;
@@ -213,54 +213,54 @@ body {
   justify-content: flex-end;
   flex-direction: column;
 }
-.container .right .chat.active-chat {
+.chatContainer .right .chat.active-chat {
   display: block;
   display: flex;
 }
-.container .right .chat.active-chat .bubble {
+.chatContainer .right .chat.active-chat .bubble {
   transition-timing-function: cubic-bezier(0.4, -0.04, 1, 1);
 }
-.container .right .chat.active-chat .bubble:nth-of-type(1) {
+.chatContainer .right .chat.active-chat .bubble:nth-of-type(1) {
   -webkit-animation-duration: 0.15s;
   animation-duration: 0.15s;
 }
-.container .right .chat.active-chat .bubble:nth-of-type(2) {
+.chatContainer .right .chat.active-chat .bubble:nth-of-type(2) {
   -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
 }
-.container .right .chat.active-chat .bubble:nth-of-type(3) {
+.chatContainer .right .chat.active-chat .bubble:nth-of-type(3) {
   -webkit-animation-duration: 0.45s;
   animation-duration: 0.45s;
 }
-.container .right .chat.active-chat .bubble:nth-of-type(4) {
+.chatContainer .right .chat.active-chat .bubble:nth-of-type(4) {
   -webkit-animation-duration: 0.6s;
   animation-duration: 0.6s;
 }
-.container .right .chat.active-chat .bubble:nth-of-type(5) {
+.chatContainer .right .chat.active-chat .bubble:nth-of-type(5) {
   -webkit-animation-duration: 0.75s;
   animation-duration: 0.75s;
 }
-.container .right .chat.active-chat .bubble:nth-of-type(6) {
+.chatContainer .right .chat.active-chat .bubble:nth-of-type(6) {
   -webkit-animation-duration: 0.9s;
   animation-duration: 0.9s;
 }
-.container .right .chat.active-chat .bubble:nth-of-type(7) {
+.chatContainer .right .chat.active-chat .bubble:nth-of-type(7) {
   -webkit-animation-duration: 1.05s;
   animation-duration: 1.05s;
 }
-.container .right .chat.active-chat .bubble:nth-of-type(8) {
+.chatContainer .right .chat.active-chat .bubble:nth-of-type(8) {
   -webkit-animation-duration: 1.2s;
   animation-duration: 1.2s;
 }
-.container .right .chat.active-chat .bubble:nth-of-type(9) {
+.chatContainer .right .chat.active-chat .bubble:nth-of-type(9) {
   -webkit-animation-duration: 1.35s;
   animation-duration: 1.35s;
 }
-.container .right .chat.active-chat .bubble:nth-of-type(10) {
+.chatContainer .right .chat.active-chat .bubble:nth-of-type(10) {
   -webkit-animation-duration: 1.5s;
   animation-duration: 1.5s;
 }
-.container .right .write {
+.chatContainer .right .write {
   position: absolute;
   bottom: 29px;
   left: 30px;
@@ -271,7 +271,7 @@ body {
   width: calc(100% - 58px);
   border-radius: 5px;
 }
-.container .right .write input {
+.chatContainer .right .write input {
   font-size: 16px;
   float: left;
   width: 347px;
@@ -284,7 +284,7 @@ body {
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 400;
 }
-.container .right .write .write-link.attach:before {
+.chatContainer .right .write .write-link.attach:before {
   display: inline-block;
   float: left;
   width: 20px;
@@ -294,7 +294,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-.container .right .write .write-link.smiley:before {
+.chatContainer .right .write .write-link.smiley:before {
   display: inline-block;
   float: left;
   width: 20px;
@@ -304,7 +304,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-.container .right .write .write-link.send:before {
+.chatContainer .right .write .write-link.send:before {
   display: inline-block;
   float: left;
   width: 20px;
@@ -315,7 +315,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-.container .right .bubble {
+.chatContainer .right .bubble {
   font-size: 16px;
   position: relative;
   display: inline-block;
@@ -325,7 +325,7 @@ body {
   vertical-align: top;
   border-radius: 5px;
 }
-.container .right .bubble:before {
+.chatContainer .right .bubble:before {
   position: absolute;
   top: 19px;
   display: block;
@@ -334,7 +334,7 @@ body {
   content: " ";
   transform: rotate(29deg) skew(-35deg);
 }
-.container .right .bubble.you {
+.chatContainer .right .bubble.you {
   float: left;
   color: var(--white);
   background-color: var(--blue);
@@ -342,11 +342,11 @@ body {
   -webkit-animation-name: slideFromLeft;
   animation-name: slideFromLeft;
 }
-.container .right .bubble.you:before {
+.chatContainer .right .bubble.you:before {
   left: -3px;
   background-color: var(--blue);
 }
-.container .right .bubble.me {
+.chatContainer .right .bubble.me {
   float: right;
   color: var(--dark);
   background-color: #eceff1;
@@ -354,23 +354,23 @@ body {
   -webkit-animation-name: slideFromRight;
   animation-name: slideFromRight;
 }
-.container .right .bubble.me:before {
+.chatContainer .right .bubble.me:before {
   right: -3px;
   background-color: #eceff1;
 }
-.container .right .conversation-start {
+.chatContainer .right .conversation-start {
   position: relative;
   width: 100%;
   margin-bottom: 27px;
   text-align: center;
 }
-.container .right .conversation-start span {
+.chatContainer .right .conversation-start span {
   font-size: 14px;
   display: inline-block;
   color: var(--grey);
 }
-.container .right .conversation-start span:before,
-.container .right .conversation-start span:after {
+.chatContainer .right .conversation-start span:before,
+.chatContainer .right .conversation-start span:after {
   position: absolute;
   top: 10px;
   display: inline-block;
@@ -379,10 +379,10 @@ body {
   content: "";
   background-color: var(--light);
 }
-.container .right .conversation-start span:before {
+.chatContainer .right .conversation-start span:before {
   left: 0;
 }
-.container .right .conversation-start span:after {
+.chatContainer .right .conversation-start span:after {
   right: 0;
 }
 
