--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -6,7 +6,7 @@
 <head>
   <link th:href = "@{/css/profilepage.css}" rel="stylesheet">
   <script th:src = "@{/js/profilepage.js}"> type="text/javascript" </script>
-  <title>Login.de.Profile Page</title>
+  <title>Locster.de.Profile Page</title>
 </head>
 
 <body>
