--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -5,7 +5,7 @@
 
 <head>
   <link th:href = "@{/css/settings.css}" rel="stylesheet">
-  <title>Login.de.Settings</title>
+  <title>Locster.de.Settings</title>
 </head>
 
 <body>
