--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -6,7 +6,7 @@
     <link th:href = "@{/css/login.css}" rel="stylesheet">
     <link th:href = "@{/css/signup.css}" rel="stylesheet">
     <script type="text/javascript" th:src = "@{/js/signup.js}"></script>
-    <title>Login.de.SignUp</title>
+    <title>Locster.de.SignUp</title>
   </head>
 
   <body>
