--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -1,74 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/css/chat.css" />
-    <link rel="stylesheet" href="../static/css/navigation.css" />
-    <title>chat</title>
-  </head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+
+<head th:replace="fragments/head"></head>
+
+
+<head>
+    <link rel="stylesheet" th:href="@{/css/chat.css}" />
+    <title>Locster.de.Chat</title>
+</head>
+
   <body>
-    <nav th:fragment="nav">
-      <div class="logo-wrapper">
-        <a href="#">
-          <img src="images/locsterLogo_Weiss.png" class="logo" />
-        </a>
-      </div>
 
-      <!-- search -->
-
-      <form>
-        <div class="input-group">
-          <input type="text" placeholder="Search" />
-          <div class="input-group-btn">
-            <button type="submit">
-              <img src="icons/glass.png" class="search-icon" />
-            </button>
-          </div>
-        </div>
-      </form>
-
-      <div class="icon-wrapper">
-        <a href="#">
-          <img src="icons/speechbubble.png" class="icon" />
-        </a>
-        <a href="#">
-          <img src="icons/group.png" class="icon" />
-        </a>
-        <a href="#">
-          <img src="icons/people.png" class="icon" />
-        </a>
-
-        <!-- dropdown -->
-
-        <div class="dropdown">
-          <button class="dropbtn">
-            <a href="#">
-              <img src="icons/person.png" class="icon" />
-            </a>
-          </button>
-          <div class="dropdown-content sb1">
-            <a href="#">
-              <img src="icons/person.png" class="icon_dropbtn" />
-              <p>Profil</p>
-            </a>
-            <a href="settings">
-              <img src="icons/gear.png" class="icon_dropbtn" />
-              <p>Einstellungen</p>
-            </a>
-            <a href="login">
-              <img src="icons/logout.png" class="icon_dropbtn" />
-              <p>Logout</p>
-            </a>
-          </div>
-        </div>
-      </div>
-    </nav>
+  <!-- navbar -->
+  <header th:replace="fragments/nav"></header>
 
     <div class="firstContainer">
       <div class="wrapper">
-        <div class="container">
+        <div class="chatContainer">
           <div class="left">
             <div class="top">
               <input type="text" placeholder="Search" />
@@ -77,7 +25,7 @@
             <ul class="people">
               <li class="person" data-chat="person1">
                 <img
-                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/thomas.jpg"
+                  th:src="@{https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/thomas.jpg}"
                   alt=""
                 />
                 <span class="name">Thomas Bangalter</span>
@@ -217,6 +165,11 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="../static/js/chat.js"></script>
+
+  <!-- footer -->
+  <footer th:replace="fragments/footer"></footer>
+
+    <script type="text/javascript" th:src="@{/js/chat.js}"></script>
+
   </body>
 </html>
