--- a/src/main/resources/templates/whoisonline.html
+++ b/src/main/resources/templates/whoisonline.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/head"></head>
 <head>
-    <meta charset="UTF-8">
     <link th:href = "@{/css/whoisonline.css}" rel="stylesheet">
     <title>Title</title>
 </head>
@@ -9,8 +9,8 @@
     <!-- navbar -->
     <header th:replace="fragments/nav"></header>
 
-    <div class="container">
-        <div class="box">
+    <div class="whoisonline-container">
+        <div class="whoisonline-box">
 
             <h2>Wer ist Online?</h2>
 
