--- a/src/main/resources/static/css/whoisonline.css
+++ b/src/main/resources/static/css/whoisonline.css
@@ -1,4 +1,4 @@
-.box {
+.whoisonline-box {
   background-color: #fff3b1;
   margin: 2%;
   border: 2px solid #fed700;
@@ -8,7 +8,7 @@
   align-items: center;
 }
 
-.box h2 {
+.whoisonline-box h2 {
     background-color: #ffe557;
     width: 100%;
     border-radius: 15px 15px 0 0;
