--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -22,6 +22,8 @@ body {
 
 .container {
     width: 800px;
+    height: auto;
+    min-height: 670px;
     margin: auto;
     background-color: #63bee8;
     display: flex;
@@ -37,6 +39,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    box-shadow: 0 0 15px;
 }
 
 /* alert messages success, info and danger */
