--- a/src/main/resources/templates/friendlist.html
+++ b/src/main/resources/templates/friendlist.html
@@ -11,7 +11,7 @@
     <header th:replace="fragments/nav"></header>
 
     <div class="container">
-      <div class="contentFriendRequests">
+      <div class="listWith6ChildContent">
         <div class="list">
           <ul>
             <li class="header">
@@ -93,6 +93,7 @@
           </ul>
         </div>
       </div>
+
 
       <div class="contentFriend">
         <div class="list">
