--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -13,7 +13,7 @@
 <!-- Setting -->
 
 <div class="container">
-  <div class="settingBox">
+  <div class="box">
 
     <div class="title">
       <h2>Einstellungen</h2>
