--- a/src/main/resources/static/css/whoisonline.css
+++ b/src/main/resources/static/css/whoisonline.css
@@ -19,3 +19,23 @@
 .table thead tr > th {
     text-align: left;
 }
+
+
+.whoisonline-box th span:nth-child(1) {
+    width: 100px;
+}
+.whoisonline-box th span:nth-child(2) {
+    width: 140px;
+}
+.whoisonline-box th span:nth-child(3) {
+    width: 100px;
+}
+.whoisonline-box th span:nth-child(4) {
+    width: 140px;
+}
+.whoisonline-box th span:nth-child(5) {
+    width: 100px;
+}
+.whoisonline-box th span:nth-child(6) {
+    width: 100px;
+}
