--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -22,45 +22,63 @@
       </div>
       <div class="form-text-container">
         <div class="form">
-          <form method="post">
+          <form th:action="@{/signup}" th:object="${user}" method="POST" enctype="utf8">
             <div class="inputs">
               <input
-                type="text"
-                placeholder="Vorname"
-                name="firstName"
-                required
+                      th:field="*{firstName}"
+                      type="text"
+                      placeholder="Vorname"
+                      name="firstName"
+                      required
               />
+              <p th:each="error : ${#fields.errors('firstName')}"
+                 th:text="${error}">Validation error</p>
               <input
-                type="text"
-                placeholder="Nachname"
-                name="lastName"
-                required
+                      th:field="*{lastName}"
+                      type="text"
+                      placeholder="Nachname"
+                      name="lastName"
+                      required
               />
+              <p th:each="error : ${#fields.errors('lastName')}"
+                 th:text="${error}">Validation error</p>
               <input
-                type="text"
-                placeholder="Dein Geburtsdatum"
-                name="birthday"
-                required
+                      th:field="*{birthday}"
+                      type="text"
+                      placeholder="Dein Geburtsdatum"
+                      name="birthday"
+                      required
               />
+              <p th:each="error : ${#fields.errors('birthday')}"
+                 th:text="${error}">Validation error</p>
               <input
-                type="text"
-                placeholder="Geschlecht"
-                name="gender"
-                required
+                      th:field="*{sex}"
+                      type="text"
+                      placeholder="Geschlecht"
+                      name="sex"
+                      required
               />
+              <p th:each="error : ${#fields.errors('sex')}"
+                 th:text="${error}">Validation error</p>
               <input
-                type="email"
-                placeholder="Deine Email-Adresse"
-                name="email"
-                required
+                      th:field="*{email}"
+                      type="email"
+                      placeholder="Deine Email-Adresse"
+                      name="email"
+                      required
               />
+              <p th:each="error : ${#fields.errors('email')}"
+                 th:text="${error}">Validation error</p>
               <input
-                type="password"
-                placeholder="Ein sicheres Passwort"
-                name="password"
-                onkeyup="onPasswordChanged()"
-                required
+                      th:field="*{password}"
+                      type="password"
+                      placeholder="Ein sicheres Passwort"
+                      name="password"
+                      onkeyup="onPasswordChanged()"
+                      required
               />
+              <p th:each="error : ${#fields.errors('password')}"
+                 th:text="${error}">Validation error</p>
               <div>
                 <p>
                   Das Passwort muss mindestens
@@ -73,12 +91,15 @@
                 </p>
               </div>
               <input
-                type="password"
-                placeholder="Passwort wiederholen"
-                name="passwordRepeat"
-                onkeyup="onPasswordRepeatChanged()"
-                required
+                      th:field="*{passwordRepeat}"
+                      type="password"
+                      placeholder="Passwort wiederholen"
+                      name="passwordRepeat"
+                      onkeyup="onPasswordRepeatChanged()"
+                      required
               />
+              <p th:each="error : ${#fields.errors('passwordRepeat')}"
+                 th:text="${error}">Validation error</p>
             </div>
             <div class="checkbox-button-container">
               <div class="submitButton">
