LOC-35 page permission control

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -50,7 +50,7 @@
                     <img src="icons/gear.png" class="icon_dropbtn" />
                     <p>Einstellungen</p>
                 </a>
-                <a href="/login">
+                <a href="/logout">
                     <img src="icons/logout.png" class="icon_dropbtn" />
                     <p>Logout</p>
                 </a>
