--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,18 +1,10 @@
-<html
-        xmlns:th="http://www.thymeleaf.org"
-        xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
->
+<html xmlns:th="http://www.thymeleaf.org">
   <link th:href="@{/css/footer.css}" rel="stylesheet" />
 
   <div class="footer">
     <footer>
       <p>
-        Copyright &copy; 2021 Locster &nbsp;-&nbsp;
-        <span sec:authorize="isAuthenticated()" style="display: inline-block;">
-          | USER: <span sec:authentication="name"></span> |
-          Roles: <span sec:authentication="principal.authorities"></span> |
-          <a th:href="@{/logout}">Abmelden</a>
-        </span>
+        Copyright &copy; 2021 Locster
         &nbsp;-&nbsp;
         <a href="/impressum">Impressum</a>
         &nbsp;-&nbsp;
