--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -26,8 +26,8 @@
         />
       </div>
       <div class="info">
-        <h2 class="profile_name">Crab Daddy</h2>
-        <h2 class="profile_city">aus Erdurt</h2>
+        <h2 class="profile_name" th:text="*{firstName + ' ' + lastName}"></h2>
+        <h2 class="profile_city">aus Erfurt</h2>
         <button type="button" class="collapsible">mehr Infos</button>
         <div class="content">
           <div class="ProfileInfosHeader">
